# Request-IA-Services

./: .env.exemple  README.md  notebook.ipynb  pyproject.toml  request-service.ipynb
